force-app/main/default/objects/TipoContrato__c/TipoContrato__c.object-meta.xml
<CustomObject>
    <label>Tipo de Contrato</label>
    <nameField>
        <label>Tipo de Contrato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipos de Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>