force-app/main/default/objects/TipoContrato__c/fields/Analise_Credito__c.field-meta.xml
<CustomField>
    <fullName>Analise_Credito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Análise de Crédito</label>
    <type>Checkbox</type>
</CustomField>