force-app/main/default/objects/TipoContrato__c/fields/Demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Demonstracao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica se o tipo de contrato é do tipo demonstração</description>
    <label>Demonstração</label>
    <type>Checkbox</type>
</CustomField>