force-app/main/default/objects/TipoContrato__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Empresa</valueSetName>
    </valueSet>
</CustomField>