force-app/main/default/objects/TipoContrato__c/fields/Familia_Sascar__c.field-meta.xml
<CustomField>
    <fullName>Familia_Sascar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Família Sascar</label>
    <type>Checkbox</type>
</CustomField>