force-app/main/default/objects/TipoContrato__c/fields/Instala_Botao_Panico__c.field-meta.xml
<CustomField>
    <fullName>Instala_Botao_Panico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instala Botão de Pânico</label>
    <type>Checkbox</type>
</CustomField>