force-app/main/default/objects/TipoContrato__c/fields/Tipo_contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Contrato</label>
    <referenceTo>TipoContrato__c</referenceTo>
    <relationshipLabel>Tipos de Contratos</relationshipLabel>
    <relationshipName>Tipos_contratos</relationshipName>
    <type>Lookup</type>
</CustomField>