force-app/main/default/objects/TipoContrato__c/listViews/Geral.listView-meta.xml
<ListView>
    <fullName>Geral</fullName>
    <columns>NAME</columns>
    <columns>Ativo__c</columns>
    <columns>Codigo_Externo__c</columns>
    <filterScope>Mine</filterScope>
    <label>Geral</label>
</ListView>